# widget

data-provider-master/: CMakeLists.txt  data-provider-master.rule
data-provider-master/data/: CMakeLists.txt  data-provider-master.service
data-provider-master/packaging/: data-provider-master.manifest  data-provider-master.spec
data-provider-master/pkgmgr_widget/: CMakeLists.txt
data-provider-master/src/: badge_service.c  buffer_handler.c  buffer_handler_wayland.c  notification_service.c  package.c  shortcut_service.c
data-provider-slave/: CMakeLists.txt  org.tizen.data-provider-slave.efl  org.tizen.data-provider-slave.xml
data-provider-slave/icon_src/: main.c  script_handler.c
data-provider-slave/include/: client.h  conf.h  main.h  so_handler.h  util.h  widget.h
data-provider-slave/packaging/: org.tizen.data-provider-slave.spec
data-provider-slave/src/: client.c  connection.c  critical_log.c  fault.c  main.c  so_handler.c  theme_loader.c  update_monitor.c  util.c  util_wayland.c  util_x11.c  widget.c
data-provider-slave/stub/: main.c
data-provider-slave/svc_src/: main.c
widget-edje/: CMakeLists.txt
widget-edje/include/: abi.h  script_port.h
widget-edje/packaging/: libwidget_edje.spec
widget-edje/src/: abi.c  script_port.c
widget-provider/: CMakeLists.txt
widget-provider/doc/: widget_provider_app_doc.h  widget_provider_doc.h
widget-provider/packaging/: libwidget_provider.spec
widget-provider/widget_provider/: CMakeLists.txt  widget_provider.pc.in
widget-provider/widget_provider/include/: widget_provider.h  widget_provider_buffer.h
widget-provider/widget_provider/include_internal/: event.h  fb.h  provider_buffer_internal.h  util.h
widget-provider/widget_provider/src/: event.c  fb.c  fb_wayland.c  util.c  widget_provider.c  widget_provider_buffer.c
widget-provider/widget_provider_app/: CMakeLists.txt  widget_provider_app.pc.in
widget-viewer/: CMakeLists.txt
widget-viewer/packaging/: libwidget_viewer.spec
widget-viewer/widget_viewer_dali/: CMakeLists.txt  widget_viewer_dali.pc.in
widget-viewer/widget_viewer_dali/include/: widget_dali.h  widget_dali_impl.h  widget_dali_list.h  widget_viewer_dali.h  widget_viewer_dali_const.h  widget_viewer_dali_generic.h
widget-viewer/widget_viewer_dali/src/: widget_dali.cpp  widget_dali_impl.cpp  widget_dali_list.cpp  widget_viewer_dali.cpp
widget-viewer/widget_viewer_dali/src/common/: widget_viewer_dali_const.cpp
widget-viewer/widget_viewer_evas/: CMakeLists.txt
widget-viewer/widget_viewer_sdk/: org.tizen.widget_viewer_sdk.efl  org.tizen.widget_viewer_sdk.xml
(+17 files in other folders)
