CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(widget_viewer_dali CXX)

SET(PREFIX "${CMAKE_INSTALL_PREFIX}")
SET(EXEC_PREFIX "\${prefix}")
SET(PROJECT_NAME "${PROJECT_NAME}")
SET(LIBDIR ${LIB_INSTALL_DIR})
SET(INCLUDEDIR "\${prefix}/include/${PROJECT_NAME}")
SET(VERSION_MAJOR 1)
SET(VERSION "${VERSION_MAJOR}.0.0")
SET(EDJDIR "/usr/share/${PROJECT_NAME}/res/edje")
SET(RESDIR "/usr/share/${PROJECT_NAME}/res")
SET(IMGDIR "/usr/share/${PROJECT_NAME}/res/image")

INCLUDE(FindPkgConfig)
pkg_check_modules(viewer_dali REQUIRED
	dlog
	widget_service
	dali
	dali-core
	dali-toolkit
)

IF (X11_SUPPORT)
pkg_check_modules(viewer_dali_extra REQUIRED
	ecore-x
)

SET(BUILD_SOURCE
	src/widget_viewer_dali.cpp
	src/widget_dali.cpp
	src/widget_dali_impl.cpp
	src/widget_dali_list.cpp
	src/common/widget_viewer_dali_const.cpp
)
ENDIF (X11_SUPPORT)

FOREACH(flag ${viewer_dali_CFLAGS} ${viewer_dali_extra_CFLAGS})
	SET(EXTRA_CXX_FLAGS "${EXTRA_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CXX_FLAGS "${EXTRA_CXX_FLAGS} -fvisibility=hidden -Wall -Werror -Winline -g")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/widget_viewer/include)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${BUILD_SOURCE})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${viewer_dali_LDFLAGS} ${viewer_dali_extra_LDFLAGS} "-lpthread" widget_viewer)

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${PROJECT_NAME}.pc")

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}.h DESTINATION include/${PROJECT_NAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/widget_dali.h DESTINATION include/${PROJECT_NAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/widget_viewer_dali_generic.h DESTINATION include/${PROJECT_NAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE DESTINATION /usr/share/license RENAME "lib${PROJECT_NAME}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/image DESTINATION "${RESDIR}")

ADD_SUBDIRECTORY(res)
